--- a/styles..css
+++ b/styles..css
@@ -6,3 +6,25 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+.container {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background: #3d4152;
+  }
+  
+  .navigation {
+    position: fixed;
+    inset: 20px 0 20px 20px;
+    width: 75px;
+    min-height: 500px;
+    background: #fff;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
